[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
rand = "0.8.5"
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
serde_with = "2.3.1"
